--- a/st-what-to-eat/package.json
+++ b/st-what-to-eat/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.438.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +17,8 @@
     "framer-motion": "^10.16.4",
     "http-proxy-middleware": "^2.0.6",
     "mongodb": "^5.9.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
