--- a/st-what-to-eat/package.json
+++ b/st-what-to-eat/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "http://localhost:1400",
+  "proxy":"http://127.0.0.1:1300/",
   "name": "st-what-to-eat",
   "version": "0.1.0",
   "private": true,
@@ -24,6 +24,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-naver-maps": "^0.1.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "sass": "^1.69.5",
