--- a/st-what-to-eat/package.json
+++ b/st-what-to-eat/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy":"http://127.0.0.1:1300/",
+  "proxy": "http://127.0.0.1:1300/",
   "name": "st-what-to-eat",
   "version": "0.1.0",
   "private": true,
@@ -10,16 +10,21 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "axios": "^1.6.0",
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.1",
     "concurrently": "^8.2.2",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "framer-motion": "^10.16.4",
     "http-proxy-middleware": "^2.0.6",
     "mongodb": "^5.9.1",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
