--- a/st-what-to-eat/package.json
+++ b/st-what-to-eat/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@aws-sdk/client-s3": "^3.438.0",
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -30,8 +31,10 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-naver-maps": "^0.1.3",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "sass": "^1.69.5",
     "web-vitals": "^2.1.4",
     "workbox-background-sync": "^6.6.0",
